test/good/functions/nested03.px

func f1(): Int def
    func g(): Int def
        return -5
    return g()

func f2(): Int def
    func g(): Int def
        return 6
    return g()

print f1() + f2()
