test/bad/lambdas/lambda07.px

func f(g: Int->Int->Int): Void def
    return

f(_)
